--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,5 +5,6 @@
     <div>
         <p><a href="/">Home</a></p>
         <p><a href="/about">About</a></p>
+        <p><a href="/projects">Projects</a></p>
     </div>
 </header>
